crates/executor/src/tests/sql/commands/snapshots/fetch/query_fetch_first_rows_only.snap
---
source: crates/executor/src/tests/sql/commands/fetch.rs
description: "\"SELECT c1 FROM fetch_test ORDER BY c1 FETCH FIRST 2 ROWS\""
info: "Setup queries: CREATE OR REPLACE TABLE fetch_test(c1 INT); INSERT INTO fetch_test VALUES (1),(2),(3),(4)"
---
Ok(
    [
        "+----+",
        "| c1 |",
        "+----+",
        "| 1  |",
        "| 2  |",
        "+----+",
    ],
)
