crates/executor/src/tests/sql/commands/snapshots/fetch/query_fetch_with_cte.snap
---
source: crates/executor/src/tests/sql/commands/fetch.rs
description: "\"WITH limited_data AS (\n        SELECT c1 FROM fetch_test ORDER BY c1 FETCH FIRST 3 ROWS\n    )\n    SELECT * FROM limited_data ORDER BY c1\""
info: "Setup queries: CREATE OR REPLACE TABLE fetch_test(c1 INT); INSERT INTO fetch_test VALUES (1),(2),(3),(4)"
---
Ok(
    [
        "+----+",
        "| c1 |",
        "+----+",
        "| 1  |",
        "| 2  |",
        "| 3  |",
        "+----+",
    ],
)
